gcc/testsuite/gdc.test/compilable/imports/test19656c.d
import imports.test19656b;

class Thud { }
