gcc/testsuite/gdc.test/fail_compilation/imports/issue21295visitor.d
module imports.issue21295visitor;
import imports.issue21295astcodegen;
class Visitor { }
